# aws-lambda-starter

./: README.md  main.py  pyproject.toml  samconfig.toml  template.yaml
aws_lambda_starter/: __init__.py  builder.py  cli.py  invoker.py  layer_builder.py
cli/: __init__.py  builder.py  cdk_deployer.py  cli.py  invoker.py  layer_builder.py
lambdas/data_processor/: app.py  event.json
lambdas/hello_world/: app.py  event.json
libs/lib_common/: pyproject.toml
libs/lib_common/src/lib_common/: __init__.py
libs/lib_common/tests/: test_common.py
libs/lib_utils/: pyproject.toml
libs/lib_utils/src/lib_utils/: __init__.py
libs/lib_utils/tests/: test_utils.py
