[project]
name = "aws-lambda-starter"
version = "0.1.0"
description = "AWS Lambda Starter Project with multiple lambdas and shared libraries"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Abdul Rauf", email = "abdulraufmujahid@gmail.com"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.3.5",
    "click>=8.1.7",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "aws-sam-cli>=1.107.0",
    "build>=1.0.3",
    "wheel>=0.42.0",
    "pyyaml>=6.0.1",
]

# AWS CDK dependencies
cdk = [
    "aws-cdk-lib>=2.94.0",
    "constructs>=10.3.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "libs"]

[project.scripts]
lambda-cli = "cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["libs"]
python_files = "test_*.py"
