[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_common"
version = "0.1.0"
authors = [
    {name = "Abdul Rauf", email = "abdulraufmujahid@gmail.com"},
]
description = "Common utilities for AWS Lambda functions"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.0",
]