[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_utils"
version = "0.1.0"
authors = [
    {name = "Abdul Rauf", email = "abdulraufmujahid@gmail.com"},
]
description = "Utility functions for AWS Lambda functions"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.6.1",
    "lib_common>=0.1.0",
]